--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -1,6 +1,6 @@
 .login 
 {
-	width:45%;
+	width:30%;
 	margin: auto;
 	margin-top: 10%;
 	background-color: rgb(38, 2, 64);
@@ -13,6 +13,9 @@
 	opacity: 1;
 
 }
+
+::placeholder {color:black;}
+
 p {color: white;}
 
 .register 
@@ -24,6 +27,7 @@ p {color: white;}
 	border-radius: 20px;
 	margin: auto;
 	width: 50%;
+	min-width: 50%;
 	margin-top: 5%;
 	padding-top:-200px;
 	display: none;
@@ -62,7 +66,7 @@ margin-bottom: 3%;
 	font-size: 2em;
 	box-shadow: 2px 10px rgb(0,0,0,0.6);
 	padding: 20px 20px;
-	background-color: rgb(240,240,240,0.4);
+	background-color: rgb(240,240,240,0.6);
 }
 
 .login input:focus 
@@ -144,5 +148,44 @@ scale:110% 110%;
 	transition: 0.3s;
 	scale: 120% 120%;
 	color: rgb(255,215,0);
+}
+
+@media screen and (max-width: 1200px) 
+{
+	.login 
+	{
+		width: 70%;
+		margin-top: 30%;
+	}
+
+	.register 
+	{
+		width: 70%;
+	}
+	.register input
+	{
+		width: 90%;
+	}
+}
+
+@media screen and (max-width: 800px) 
+{
+	.login 
+	{
+		margin-top: 40%;
+		width: 90%;
+	}
+
+	.login input {background-color: rgb(250,250,250,0.7);}
+
+	.register 
+	{
+		width: 90%;
+	}
+	.register input
+	{
+		width: 90%;
+	}
+	
 }
 
