belepes hiba kiiras fix

--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -162,6 +162,7 @@ scale:110% 110%;
 {
 	#hiba_doboz
 {
+		margin-top: 5%;
 margin-left: 15%;
 }
 	.login 
@@ -184,6 +185,7 @@ margin-left: 15%;
 {
 	#hiba_doboz
 {
+	margin-top: 10%;
 margin-left: 5%;
 
 }
