--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -1,6 +1,6 @@
 .login 
 {
-	width:30%;
+	width:32vw;
 	margin: auto;
 	margin-top: 10%;
 	background-color: rgb(38, 2, 64);
@@ -23,8 +23,18 @@ display: block;
 
 #hiba_doboz p {color: red;}
 ::placeholder {color:black;}
+#check_list 
+{
+	background-color: rgb(120,120,120,0.5); 
+	color: white;
+	width: 30%;
+	font-size: 1.5em;
+	position: fixed;
+	top: 5%;
+	right: 3%;
+	padding-left: 10px;
+}
 
-p {color: white;}
 
 .register 
 {
@@ -37,6 +47,7 @@ p {color: white;}
 	width: 50%;
 	min-width: 50%;
 	margin-top: 5%;
+	margin-left: 10%;
 	padding-top:-200px;
 	display: none;
 	opacity: 0;
@@ -70,7 +81,7 @@ font-size: 2em;
 {
 	margin-top: 5%;
 margin-bottom: 3%;
-	width: 75%;
+	width: 25vw;
 	font-size: 2em;
 	box-shadow: 2px 10px rgb(0,0,0,0.6);
 	padding: 20px 20px;
@@ -158,48 +169,46 @@ scale:110% 110%;
 	color: rgb(255,215,0);
 }
 
-@media screen and (max-width: 1200px) 
+@media screen and (max-width: 990px) 
 {
-	#hiba_doboz
-{
-		margin-top: 5%;
-margin-left: 15%;
-}
-	.login 
+	#check_list 
 	{
-		width: 70%;
-		margin-top: 30%;
+		position: relative; top: 1vw; left: 14%; width: 70%; padding: 1px 10px;
 	}
-
+	#registerId p
+	{
+	font-size: 4em;
+	}
 	.register 
 	{
-		width: 70%;
+		width: 80%;
 	}
-	.register input
+	.register input 
 	{
-		width: 90%;
+		width: 80%;
 	}
 }
 
 @media screen and (max-width: 800px) 
 {
 	#hiba_doboz
-{
+	{
 	margin-top: 10%;
 margin-left: 5%;
 
-}
+	}
 	.login 
 	{
-		margin-top: 40%;
-		width: 90%;
+		margin-top: 20vh;
+		width: 70%;
 	}
 
-	.login input {background-color: rgb(250,250,250,0.7);}
+	.login input {background-color: rgb(250,250,250,0.7); width: 80%;}
 
 	.register 
 	{
 		width: 90%;
+		margin-left: 4.7%;
 	}
 	.register input
 	{
