--- a/Resources/CSS/profil.css
+++ b/Resources/CSS/profil.css
@@ -51,7 +51,7 @@ body
 	background-color: transparent;
 	border: none;
 	color:red;
-	float: right;
+	float: left;
 }
 
 #adatok button:hover 
@@ -62,8 +62,10 @@ body
 }
 #logout 
 {
+    float: right;
 	font-size: 2.5vw;
 	color: cyan;
+    margin-right: 5%;
 }
 
 #logout:hover
@@ -181,7 +183,7 @@ float: none;
 }
 
 
-#adatok button, #logout {font-size: 3vw;margin-left: 4vw;}
+#adatok button, #logout {font-size: 2em;margin-left: 4vw;}
 #adatok button {margin-right: 10vw;}
 
 .label {
@@ -214,6 +216,7 @@ float: none;
     width: 101vw;
     margin-left: -2vw;
     overflow: auto;
+
 }
 .Raktar iframe {
     width: 100vw;
@@ -234,7 +237,7 @@ float: none;
 }
 
 #items-container {background-color: red;}
-
+#veglegesit {background-color: rgb(120,120,120,0.5)}
 }
 
 
