--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -33,6 +33,7 @@ display: block;
 	top: 5%;
 	right: 3%;
 	padding-left: 10px;
+	display: none;
 }
 #check_list p > span:first-child
 {
@@ -191,6 +192,9 @@ scale:110% 110%;
 	{
 		width: 80%;
 	}
+	.login {width: 60%;}
+	.login input {width: 85%;}
+	#loginBtn {width: 60%;}
 }
 
 @media screen and (max-width: 800px) 
