--- a/Resources/CSS/forum.css
+++ b/Resources/CSS/forum.css
@@ -135,12 +135,19 @@ width: fit-content;
 	background-color: white;
 	margin-top: 5%;
 }
+.post-alreadyLiked{
+	margin-left: 4%;
+	background-color: rgb(100,100,255,0.9) !important;
+	
+}
+
 
 .post button:hover, .comment button:hover
 {
 	font-size: 1.45em;
 	background-color: rgb(255,255,255,0.9);
 }
+
 .post-likes
 {
 margin-left: 4%;
