--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -1,3 +1,4 @@
+
 .login 
 {
 	width:32vw;
@@ -111,10 +112,18 @@ font-size: 0.8em;
 margin-right: 10px;
 margin-bottom: 0px;
 margin-top: 0px;
-padding: 0;
+padding: 2vh;
 background-color: white;
 transition: 0.3s;
 }
+
+#felejt_jelszo:hover 
+{
+	background-color: rgb(201,201,201);
+	scale: 110% 110%;
+}
+
+
 #felejt_jelszo_doboz {text-align: right;}
 
 
@@ -173,9 +182,102 @@ scale:110% 110%;
 	scale: 120% 120%;
 	color: rgb(255,215,0);
 }
+#blur 
+{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	background-color: rgb(30,30,30,0.8);
+	display: none;
+}
+#ForgotContainer 
+{
+	display: none;
+	background-color: rgb(72,13,122);
+	position: absolute;
+	top: 10vw;
+	left: 35vw;
+	width: 30vw;
+	text-align: center;
+	border: 2px solid white;
+	border-radius: 13px;
+}
+#ForgotContainer p
+{
+	color: rgb(201,201,201);
+	text-transform: uppercase;
+	margin: 3vh;
+	font-size: 6.5vh;
+}
+#ForgotContainer input[type="submit"] 
+{
+	border: none;
+	font-size: 5.5vh;
+	padding: 3vh;
+	width: 50%;
+	position: relative;
+	top: 5vh;
+}
 
+#ForgotContainer input[type="submit"]:hover 
+{
+	background-color: rgb(201,201,201);
+	transition: 0.2s;
+}
+
+#ForgotContainer input[type="text"] 
+{
+	border: none;
+	padding: 3vh;
+	font-size: 2.5vw;
+	width: 80%;
+	margin-bottom: 3vh;
+	background-color: rgb(159,146,169,0.6);
+	box-shadow: 2px 10px rgb(0,0,0,0.6);
+	transition: 0.1s;
+}
+#ForgotContainer input[type="text"]::placeholder 
+{
+	color: rgb(0,0,0,0.3);
+}
+
+#ForgotContainer input[type="text"]:focus 
+{
+	width: 85%;
+	transition: 0.1s;
+	background-color: white;
+}
+#ForgotContainer a 
+{
+font-size: 5vh;
+position: absolute;
+left: 28vw;
+top: -1vw;
+background-color: white;
+border-radius: 100px;
+padding: 0.5vh 2vh;
+border: 1px solid black;
+}
+
+#ForgotContainer a:hover 
+{
+	background-color: rgb(201,201,201);
+	transition: 0.2s;
+}
 @media screen and (max-width: 990px) 
 {
+
+#ForgotContainer 
+{
+width: 50vw;
+left: 25vw;
+}
+#ForgotContainer a 
+{
+	left: 48vw;
+}
+
 	#check_list 
 	{
 		position: relative; top: 1vw; left: 14%; width: 70%; padding: 1px 10px;
