--- a/Resources/CSS/inventory.css
+++ b/Resources/CSS/inventory.css
@@ -7,7 +7,8 @@ background-image: none;
 #veglegesit-div
 {
 	width: 100vw;
-	background-color: red;
+	position: relative;
+	top: 110vh;
 } 
 #veglegesit button
 {
