--- a/Resources/CSS/sajat_aukcio.css
+++ b/Resources/CSS/sajat_aukcio.css
@@ -69,13 +69,13 @@ overflow: hidden;
 {
 	width: 100%;
 	text-align: center;
-	height: 80%;
 }
 #raktar-div 
 {
 height: 90%;
 width: 80%;
 margin: 1% auto;
+display: none;
 } 
 
 #raktar {
