--- a/Resources/CSS/sajat_aukcio.css
+++ b/Resources/CSS/sajat_aukcio.css
@@ -1,6 +1,6 @@
 body 
 {
-overflow: hidden;
+overflow-x: hidden;
 }
 
 
@@ -102,7 +102,7 @@ display: none;
 	}
 	
 	body{
-		overflow:auto;
+		overflow-x:hidden;
 	}
 	
 	.aukcio-info{
