--- a/Resources/CSS/inventory.css
+++ b/Resources/CSS/inventory.css
@@ -161,7 +161,7 @@ table{
 	
 }
 
-@media screen and (max-width:454px) 
+@media screen and (max-width:1000px) 
 {
 	
 	body{
@@ -202,6 +202,7 @@ table{
 
 	#info-sorkizart {
     font-size: 10vh;
+	max-height: 45vh;
 }
 	
 }
